# conversion-rate-predictor

./: README.md  dev.ipynb  property_data_generation.py  pyproject.toml
