[tool.poetry]
name = "conversion-rate-predictor"
version = "0.1.0"
description = ""
authors = ["Jordan Hauge <jordanchauge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.1"
matplotlib = "^3.9.1.post1"
jupyter = "^1.0.0"
shap = "0.46.0"
xgboost = "2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
